[package]
name = "rpc-tester-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
rpc-tester.workspace = true
reth-tracing.workspace = true

alloy-rpc-types.workspace = true
alloy-provider.workspace = true

url.workspace = true
clap.workspace = true
eyre.workspace = true
tokio = { workspace = true, default-features = false, features = [
    "rt-multi-thread",
] }
