
[package]
name = "rpc-tester"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
reth-tracing.workspace = true

alloy-primitives.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-trace.workspace = true
alloy-provider = { workspace = true, features = ["trace-api", "debug-api"] }

assert-json-diff.workspace = true
eyre.workspace = true
futures.workspace = true
serde = { workspace = true, default-features = false }
serde_json.workspace = true
tokio = { workspace = true, default-features = false }
